--- a/JavaMyExercises/DrawPanelTest/nbproject/project.properties
+++ b/JavaMyExercises/DrawPanelTest/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DrawPanelTest
 excludes=
+file.reference.Dio.jar=..\\Dio\\dist\\Dio.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Dio.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
